--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ streamlit>=1.39,<2
 pandas>=2.2
 numpy>=1.26
 matplotlib>=3.8
+statsmodels>=0.14
 
 # # ---- Optional classical models (commented out by default) ----
 # pmdarima>=2.0
